# dmplugincpp

./: .travis.yml  CMakeLists.txt  README.md  build.bat
cmake/: ModuleCompileOptions.cmake
include/: dmplugincpp.h  dmplugincpp_config.h.in
include/common/: error_code.h  msg_codec.h  plugin.hpp  raii_dll.h  router.hpp
src/custom/: custom_plugin.cc
src/dmplugincpp/common/: router.hpp
src/dmplugincpp/plugin/: custom_plugin.cc  dummy_plugin.cc
src/dmplugincpp_module/: dmplugincpp_module.cpp  dmplugincpp_module.h
src/dummy/: dummy_plugin.cc
test/dmplugincpptest/: dmplugincpptest.cpp
test/plugin_app/: main.cpp  test.h
