cmake_minimum_required(VERSION 3.2)

PROJECT(dmplugincpp)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(DMPLUGINCPP_VERSION_MAJOR "1")
SET(DMPLUGINCPP_VERSION_MINOR "0")
SET(DMPLUGINCPP_VERSION_PATCH "1")
SET(DMPLUGINCPP_VERSION "${DMPLUGINCPP_VERSION_MAJOR}.${DMPLUGINCPP_VERSION_MINOR}.${DMPLUGINCPP_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMPLUGINCPP_VERSION}")

OPTION(USE_DMPLUGINCPP "use dmplugincpp" OFF)

LibImport("dmplugincpp" "src/dmplugincpp")
ExeImport("test" "dmplugincpp")
